--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -5,16 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:View"
         mc:Ignorable="d"
-        Title="MainWindow" Height="900" Width="1700">
+        Title="MainWindow" Height="600" Width="1300
+        ">
     <Grid>
-        <Button Content="Play" HorizontalAlignment="Left" Margin="1539,31,0,0" VerticalAlignment="Top" Width="118" Height="117" Click="Button_Click_Play"/>
-        <Button Content="What?" HorizontalAlignment="Left" Margin="1378,31,0,0" VerticalAlignment="Top" Width="118" Height="117" Click="Button_Click_1"/>
-        <Button Content="Pause" HorizontalAlignment="Left" Margin="1378,195,0,0" VerticalAlignment="Top" Width="118" Height="117" Click="Button_Click_Pause"/>
-        <Button Content="Fast Forward" HorizontalAlignment="Left" Margin="1539,195,0,0" VerticalAlignment="Top" Width="118" Height="117"/>
-        <Button Content="Parameters" HorizontalAlignment="Left" Margin="1378,363,0,0" VerticalAlignment="Top" Width="118" Height="117" Click="Button_Click_Settings"/>
-        <Ellipse Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="230" Margin="102,86,0,0" Stroke="Black" VerticalAlignment="Top" Width="229"/>
-        <Ellipse Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="230" Margin="463,477,0,0" Stroke="Black" VerticalAlignment="Top" Width="229"/>
-        <Ellipse Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="230" Margin="102,477,0,0" Stroke="Black" VerticalAlignment="Top" Width="229"/>
-        <Ellipse Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="230" Margin="463,86,0,0" Stroke="Black" VerticalAlignment="Top" Width="229"/>
+        <Button Content="PLAY" HorizontalAlignment="Left" Margin="13,10,0,0" VerticalAlignment="Top" Width="108" Height="108" Click="Button_Play"/>
+        <Button Content="SETTINGS" HorizontalAlignment="Left" Margin="13,383,0,0" VerticalAlignment="Top" Width="108" Height="176" Click="Button_Settings"/>
+        <Button Content="PAUSE" HorizontalAlignment="Left" Margin="13,123,0,0" VerticalAlignment="Top" Width="108" Height="108" Click="Button_Pause"/>
+        <Button Content="FASTFORWARD" HorizontalAlignment="Left" Margin="13,236,0,0" VerticalAlignment="Top" Width="108" Height="108" Click="Button_FFWD"/>
+        <DataGrid HorizontalAlignment="Left" Height="549" Margin="149,10,0,0" VerticalAlignment="Top" Width="1133"/>
     </Grid>
 </Window>
