--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -12,6 +12,8 @@
         <Button Content="SETTINGS" HorizontalAlignment="Left" Margin="13,383,0,0" VerticalAlignment="Top" Width="108" Height="176" Click="Button_Settings"/>
         <Button Content="PAUSE" HorizontalAlignment="Left" Margin="13,123,0,0" VerticalAlignment="Top" Width="108" Height="108" Click="Button_Pause"/>
         <Button Content="FASTFORWARD" HorizontalAlignment="Left" Margin="13,236,0,0" VerticalAlignment="Top" Width="108" Height="108" Click="Button_FFWD"/>
-        <DataGrid HorizontalAlignment="Left" Height="549" Margin="149,10,0,0" VerticalAlignment="Top" Width="1133"/>
+        <DataGrid x:Name="StaffGrid" HorizontalAlignment="Left" Height="304" Margin="200,198,0,0" VerticalAlignment="Top" Width="435"/>
+        <DataGrid x:Name="DiningTableGrid" HorizontalAlignment="Left" Height="264" Margin="684,34,0,0" VerticalAlignment="Top" Width="509" RenderTransformOrigin="-0.305,-0.4"/>
+        <DataGrid x:Name="CounterGrid" HorizontalAlignment="Left" Height="233" Margin="684,326,0,0" VerticalAlignment="Top" Width="470"/>
     </Grid>
 </Window>
