Creation combobox, mise en commentaire dns SImulationClock + CtronollerFacade pour execution

--- a/View/Settings.xaml
+++ b/View/Settings.xaml
@@ -46,5 +46,6 @@
         <TextBlock HorizontalAlignment="Left" Margin="317,206,0,0" TextWrapping="Wrap" Text="Coeff. de rapidité" VerticalAlignment="Top" Height="23" Width="93" />
         <TextBlock HorizontalAlignment="Left" Margin="317,234,0,0" TextWrapping="Wrap" Text="Coeff. de rapidité" VerticalAlignment="Top" Height="23" Width="93" />
         <Menu HorizontalAlignment="Left" Height="100" Margin="10,318,0,0" VerticalAlignment="Top" Width="120"/>
+        <ComboBox x:Name="ComboScenario" HorizontalAlignment="Left" Margin="317,366,0,0" VerticalAlignment="Top" Width="120" Loaded="ComboBox_Loaded"/>
     </Grid>
 </Window>
