--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -9,10 +9,12 @@
         ">
     <Grid>
         <Button x:Name="PlayButton" Content="Jouer" HorizontalAlignment="Left" Margin="13,10,0,0" VerticalAlignment="Top" Width="108" Height="108" Click="Button_Play"/>
-        <Button Content="Paramètres" HorizontalAlignment="Left" Margin="13,383,0,0" VerticalAlignment="Top" Width="108" Height="176" Click="Button_Settings"/>
+        <Button Content="Paramètres" HorizontalAlignment="Left" Margin="13,423,0,0" VerticalAlignment="Top" Width="108" Height="136" Click="Button_Settings"/>
         <Button x:Name="PauseButton" Content="Pause" HorizontalAlignment="Left" Margin="13,123,0,0" VerticalAlignment="Top" Width="108" Height="108" Click="Button_Pause" IsEnabled="False"/>
-        <Button Content="Avance Rapide" HorizontalAlignment="Left" Margin="13,236,0,0" VerticalAlignment="Top" Width="108" Height="108" Click="Button_FFWD"/>
+        <Button Content="Actualiser vitesse" HorizontalAlignment="Left" Margin="13,373,0,0" VerticalAlignment="Top" Width="108" Height="34" Click="Button_FFWD"/>
         <DataGrid x:Name="StaffGrid" HorizontalAlignment="Left" Height="304" Margin="200,198,0,0" VerticalAlignment="Top" Width="435" IsReadOnly="True"/>
         <DataGrid x:Name="DiningTableGrid" HorizontalAlignment="Left" Height="549" Margin="684,10,0,0" VerticalAlignment="Top" Width="509" RenderTransformOrigin="-0.305,-0.4" IsReadOnly="True"/>
+        <TextBox HorizontalAlignment="Left" Height="94" Margin="13,247,0,0" TextWrapping="Wrap" Text="Nb de secondes réelles pour 1 min dans la simulation : (valeur de type double)" VerticalAlignment="Top" Width="108" IsReadOnly="True"/>
+        <TextBox x:Name="SimulationSpeedInput" HorizontalAlignment="Left" Height="22" Margin="13,346,0,0" TextWrapping="Wrap" Text="1,0" VerticalAlignment="Top" Width="108"/>
     </Grid>
 </Window>
