--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -17,5 +17,6 @@
         <TextBox HorizontalAlignment="Left" Height="94" Margin="13,247,0,0" TextWrapping="Wrap" Text="Nb de secondes réelles pour 1 min dans la simulation : (valeur de type double)" VerticalAlignment="Top" Width="108" IsReadOnly="True"/>
         <TextBox x:Name="SimulationSpeedInput" HorizontalAlignment="Left" Height="22" Margin="13,346,0,0" TextWrapping="Wrap" Text="1,0" VerticalAlignment="Top" Width="108"/>
         <TextBox x:Name="SimulationTime" HorizontalAlignment="Left" Height="29" Margin="126,10,0,0" TextWrapping="Wrap" Text="Heure" VerticalAlignment="Top" Width="478" IsReadOnly="True"/>
+        <ComboBox x:Name="ComboScenario" HorizontalAlignment="Left" Margin="126,54,0,0" VerticalAlignment="Top" Width="478" Loaded="ComboBox_Loaded" SelectionChanged="ComboBox_SelectionChanged" SelectedIndex="0"/>
     </Grid>
 </Window>
